--- a/Client/src/main/resources/homepage.css
+++ b/Client/src/main/resources/homepage.css
@@ -14,6 +14,10 @@
 
 }
 
+.page-content {
+    -fx-spacing: 10px;
+}
+
 .box {
     -fx-fill: red;
     -fx-height: 1000;
@@ -60,4 +64,12 @@
     -fx-gap: 25px;
     -fx-fill: red;
     -fx-background-color: #555555;
+}
+
+.caption-small {
+    -fx-fill: white;
+}
+
+.save-box {
+    -fx-padding: 4px;
 }
