--- a/Client/src/main/resources/org/boardgame/boardgamehelper/newGame.fxml
+++ b/Client/src/main/resources/org/boardgame/boardgamehelper/newGame.fxml
@@ -7,7 +7,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox fx:id="root" minWidth="400.0" prefHeight="400.0" prefWidth="600.0" stylesheets="/homepage.css, /newGame.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.boardgame.boardgamehelper.controllers.newGame">
+<?import javafx.scene.control.TextArea?>
+<VBox fx:id="root" minWidth="700.0" prefHeight="500.0" prefWidth="800.0" stylesheets="/homepage.css, /newGame.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.boardgame.boardgamehelper.controllers.newGame">
    <children>
       <Group VBox.vgrow="ALWAYS">
          <HBox alignment="CENTER_LEFT" prefHeight="41.0" prefWidth="4000.0" spacing="40.0" styleClass="header-con">
@@ -19,7 +20,7 @@
       </Group>
       <VBox prefHeight="4000.0" prefWidth="4000.0">
          <children>
-            <HBox prefHeight="400.0" prefWidth="400.0">
+            <HBox styleClass="page-content" prefHeight="400.0" prefWidth="400.0">
                <children>
                   <VBox prefHeight="4000.0" prefWidth="4000.0">
                      <children>
@@ -43,17 +44,21 @@
                         </VBox>
                      </children>
                   </VBox>
+                  <VBox prefHeight="400.0" prefWidth="119.0">
+                     <children>
+                        <Text strokeType="OUTSIDE" styleClass="caption-small" strokeWidth="0.0" text="Save Name" />
+                        <TextField fx:id="saveName" prefHeight="26.0" prefWidth="82.0" text="Save Name" />
+                        <Text strokeType="OUTSIDE" styleClass="caption-small" strokeWidth="0.0" text="Game description" />
+                        <TextArea fx:id="description" />
+                  <Button mnemonicParsing="false" onMouseClicked="#save" styleClass="saved" text="Save" />
+                     </children>
+                  </VBox>
                   <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" styleClass="save-box">
                      <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="asset-caption" text="Tokens" />
                         <VBox fx:id="selectedLocalTokens" prefHeight="200.0" prefWidth="100.0">
                            <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="local tokens" />
-                           </children>
-                        </VBox>
-                        <VBox fx:id="SelectedOnlineTokens" prefHeight="200.0" prefWidth="100.0">
-                           <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="online tokens" />
+                              <Text styleClass="caption-small" strokeType="OUTSIDE" strokeWidth="0.0" text="local tokens" />
                            </children>
                         </VBox>
                      </children>
@@ -63,19 +68,7 @@
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="asset-caption" text="maps" />
                         <VBox fx:id="selectedLocalMaps" prefHeight="200.0" prefWidth="100.0">
                            <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="local maps" />
-                           </children>
-                        </VBox>
-                        <VBox fx:id="selectedOnlineMaps" prefHeight="200.0" prefWidth="100.0">
-                           <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="online maps" />
-                           </children>
-                        </VBox>
-                        <VBox>
-                           <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Save Name" />
-                        <TextField fx:id="saveName" text="Save Name" />
-                        <Button mnemonicParsing="false" onMouseClicked="#save" styleClass="saved" text="Save" />
+                              <Text styleClass="caption-small" strokeType="OUTSIDE" strokeWidth="0.0" text="local maps" />
                            </children>
                         </VBox>
 
