--- a/Client/src/main/resources/org/boardgame/boardgamehelper/savedGames.fxml
+++ b/Client/src/main/resources/org/boardgame/boardgamehelper/savedGames.fxml
@@ -1,14 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.Group?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.StackPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.boardgame.boardgamehelper.controllers.savedGames"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<?import javafx.scene.layout.VBox?>
+<ScrollPane
+        fx:id="root"
+        xmlns="http://javafx.com/javafx"
+        xmlns:fx="http://javafx.com/fxml"
+        fx:controller="org.boardgame.boardgamehelper.controllers.savedGames"
+        prefHeight="500.0" prefWidth="800.0" stylesheets="/homepage.css, /savedGames.css"
+>
+    <VBox spacing="5">
+    <Group>
+        <HBox alignment="CENTER_LEFT" prefHeight="41.0" prefWidth="800.0" spacing="40.0" styleClass="header-con">
+            <children>
+                <Text layoutX="58.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header-text" text="Board Game Helper" />
+                <Button fx:id="homeButton" mnemonicParsing="false" onMouseClicked="#pageHandler" styleClass="headerButton" text="Home" />
+            </children>
+        </HBox>
+    </Group>
+    <StackPane>
+        <FlowPane styleClass="card-container" fx:id="cardContainer">
+        </FlowPane>
+    </StackPane>
+    </VBox>
+</ScrollPane>
